css/style.css
* {
    color: rgba(255, 255, 255, 1);
    text-decoration: none;
    list-style: none;
    font-family: 'Inter', sans-serif;
    padding: 0;
    margin: 0;
    right: 0;
    /* font-family: 'San Francisco', Helvetica, Arial, san-serif;  #funkar typ inte */
}

html, body {
    height: 200vh;
    width: 100%;
    overflow-x: hidden;
    background-color: #181818;
    
}

    #gridwrap {
        display: flex;
        height: calc(100vh - 69px);
        width: 100%;
        
        flex-direction: column;
        padding-top: 69px;
    }

        header {
            display: flex;
            flex-direction: row;
            align-items: center;
            background-color: rgba(0, 0, 0);
            color: white;
            height: 69px;
            position: fixed;
            top: 0px;
            width: 100%;
            z-index: 2;
            margin: 0px;
        }

            .title {
                position: relative;
                margin-left: 20px;
            }

            .burger {
                position: fixed;
                right: 20px;
            }
            
                .burger div {
                    width: 34px;
                    height: 4px;
                    background-color: white;
                    margin: 8px 0;
                    border-radius: 15%;
                    transition: all 0.5s;
                }

        .nav {
            display: flex;
            flex-direction: column;
            background-color: rgba(0,0,0,1);
            position: fixed;
            text-align: center;
            align-items: center;
            width: 100%;
            top: -100vh;
            height: calc(100vh - 69px);
            font-size: 22px;
            transition: 0.5s;
            z-index: 1;
        }

            .nav-active {
                width: 100%;
                top: 69px;
                z-index: 1;
            }

            .nav-links {
                display: flex;
                flex-direction: column;
                gap: 20px;
                margin-top: 50px;
                width: 100%;
            }

                .options {
                    display: flex;
                    justify-content: center;
                    align-items: center;
                    color: rgba(255, 255, 255, 1);
                    width: 100%;
                }

                    .nav-links a {
                        text-decoration: none;
                        letter-spacing: 0.1875rem;
                        font-weight: bold;
                        font-size: 1.1rem;
                        text-transform: uppercase;
                        padding: 15px;
                        width: 100%;
                    }

            #profile {
                display: flex;
                color: white;
                align-items: center;
                gap: 10px;
                position: relative;
                margin-top: 30px;
            }

                .pfp {
                    width: 50px;
                    height: 50px;
                
                    outline: 0;
                
                    border-radius: 999px;
                }

            

        #wrapper-card {
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;

            height: calc(100% - 69px);

            gap: 20px;
            padding: 20px;
        }



.card {
    padding: 16px;
    color: white;

    max-height: 400px;
    min-width: 250px;
    flex-shrink: 1;
    flex-grow: 1;
    border-radius: 15px;

    transition: 0.2s;
}

.background {
    background-repeat: no-repeat;
    background-position: center;
}

.artcard1 {
    background-color: crimson;
    /* background-image: url(../img/space-background.jpg); */
}

.artcard2 {
    background-color: crimson;
    background-image: url();
}

.artcard3 {
    background-color: crimson;
    background-image: url();
}

.artcard4 {
    background-color: crimson;
    background-image: url();
}

.artcard5 {
    background-color: crimson;
    background-image: url();
}



.toggle #line2 {
    opacity: 0;
}

.toggle #line1 {
    transform: rotate(-45deg) translate(-11px, 6px);
}

.toggle #line3 {
    transform: rotate(45deg) translate(-5px, -6px);
}

.artlist {
    display: none;
}

.moreart {
    display: none;
}

.artcontainer {
    display: flex;
    height: 100%;
    width: 100%;
    justify-content: center;
}

    #artwork {
        box-shadow: 10px 10px 18px 0 #0d0c11, -10px 10px 18px 0 #0d0c11;
        width: ;
        height:fit-content;
    }
    
.desccontainer {
    top: 100vh;
    background-color: #0c0c0c;
    width: 100%;
    height: 100px;
}


/* footer{
    display: flex;
    background-color: var(--gray7);
    width: 100%;
    height: 40vh;
    gap: 10px;
    position: relative;
    flex-direction: column;
}

footer > hr{
    border: none;
    border-top: 3px dashed var(--gray5);

}

#footer-hr1{
    width: 20em;
}
#footer-hr2{
    width: 15em;
}
#footer-hr3{
    width: 10em;
}

#footer-nav > a{
    text-decoration: none;
    margin: .5em;

    color: var(--gray0);
    font-size: 1rem;
    font-weight: 300;
    font-family: var(--font-head);
    font-weight: 200;
} */







        







@media only screen and (min-width: 800px) {
:root {
    --background: #181818;
    --white-50: rgba(255, 255, 255, 0.5);
    --white-20: rgba(255, 255, 255, 0.2);
    --white-10: rgba(255, 255, 255, 0.1);
    --black: rgba(0, 0, 0);
}

html, body {
    height: 100%;
    width: 100%;

    background-color: #181818;
}

* {
    color: rgba(255, 255, 255, 1);
    text-decoration: none;
    list-style: none;
    font-family: 'Inter', sans-serif;
    padding: 0;
    margin: 0;
}

.burger:hover {
    cursor: pointer;
}

.pfp {
    width: 40px;
    height: 40px;

    outline: 0px solid var(--white-20);

    border-radius: 999px;
}

.nav {
    display: flex;
    flex-direction: column;
    background-color: rgba(0,0,0,1);
    width: 200px;
    top: 69px;
    right: -200px;
}

.nav-active {
    transform: translateX(-200px);
}

.options {
    margin-top: 15px;
    padding: 0;
    transition: 0.15s;
}

.options:hover {
    background-color: #181818
}

.card:hover {
    opacity: 0.85;
}

.background {
    background-repeat: no-repeat;
    background-position: center;
}

.asideartlist {
    display: flex;
    flex-direction: column;
    background-color: rgba(0,0,0,1);
    width: 200px;
    top: 69px;

    position: fixed;
    height: calc(100vh - 69px);
    z-index: 1;
    left: 0;
}

    .moreart {
        display: flex;
        flex-direction: row;
        height: calc(100% - 69px);
        background-color: rgba(0,0,0,1);
        flex-wrap: wrap;
    }

        .asideartitem {

        }

.artcontainer {
    display: flex;
    height: 100%;
    width: 100%;
    justify-content: center;
    align-items: center;
}

    #artwork {
        box-shadow: 10px 10px 18px 0 #0d0c11, -10px 10px 18px 0 #0d0c11;
        width: fit-content;
    }

}

